<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@id/note_top_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_top_edit_text"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@id/note_cost_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_cost_edit_text"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@id/note_text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_text_edit_text"
        android:layout_marginTop="5dp"/>
</LinearLayout>