<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:text="@string/chooser_poster"/>

                    <Button
                        android:id="@id/chooser_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/chooser_image_chooser" />

            </LinearLayout>

            <ImageView
                android:id="@id/chooser_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_action_name"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/chooser_image"/>

        </LinearLayout>

        <EditText
            android:id="@id/chooser_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:hint="@string/chooser_title"/>

        <EditText
            android:id="@id/chooser_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:maxLines="3"
            android:hint="@string/chooser_description" />

    </LinearLayout>

</LinearLayout>